# partialBWTreePrototyp

./: .cproject  .project
Debug/: makefile
Debug/src/: main.d  subdir.mk
src/: CMakeLists.txt  main.cc
src/BWTree/: AbstractPage.h  BWTree.h  BWTree_old.txt  Config.h  LeafDeltaRecord.h  LeafPage.h  PageTypes.h
